# ChernoOpenGLTutorial

./: CMakeLists.txt  README.md
include/: Shader.h
shaders/fragment/: fragment.glsl
shaders/vertex/: vertex.glsl
src/: Shader.cpp  main.cpp
